# CloakBrowser-Manager

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
backend/: binary_manager.py  binary_status.py  browser_manager.py  build.py  config.py  database.py  kernel_manager.py  kernels_api.py  main.py  models.py  requirements-dev.txt  requirements.txt  sidecar_entry.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_binary_location.py  test_binary_manager.py  test_binary_status.py  test_browser_manager.py  test_browser_manager_native.py  test_build.py  test_config.py  test_database.py  test_entry.py  test_kernel_manager.py  test_kernels_api.py  test_models.py  test_origin.py  test_stdio_hardening.py
desktop/: CloakBrowserManager.spec  api_bridge.py  app.py  build.bat  build.md  controller.py  requirements.txt  server.py  settings.py  tray.py
desktop/tests/: test_api_bridge.py  test_app_paths.py  test_controller.py  test_frozen_paths.py  test_server.py  test_settings.py  test_window_geometry.py
docs/: FOLLOW-UPS.md
docs/superpowers/plans/: 2026-07-11-native-desktop-client.md  2026-07-12-kernel-version-management.md  2026-07-13-kernel-management.md  2026-07-13-tauri-sidecar-desktop-client.md  native-desktop-followups.md  task1-preflight-findings.md
docs/superpowers/specs/: 2026-07-11-native-desktop-client-design.md  (+2 more)
frontend/: package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/src/: App.tsx  pywebview.d.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/lib/: api.test.ts  (+2 more)
(+23 files in other folders)
