[package]
name = "cloakbrowser-manager"
version = "0.1.0"
description = "CloakBrowser profile manager desktop client"
edition = "2021"

[lib]
name = "cloakbrowser_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
tauri-plugin-dialog = "2.7.1"
